--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,18 +6,16 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_C_COMPILER "gcc")
 set(CMAKE_CXX_COMPILER "g++")
 
-#link_directories("/usr/local/lib")
-
 link_libraries(
         opencv_core
         opencv_highgui
         opencv_imgproc
         opencv_video
-        opencv_plot
-        opencv_video
+        #        opencv_plot
+        #        opencv_video
         opencv_videoio
-        opencv_photo
-        opencv_xphoto
+        #        opencv_photo
+        #        opencv_xphoto
         opencv_imgcodecs
         stdc++fs
         pthread
@@ -29,6 +27,8 @@ set(SOURCE_FILES
         Config.cpp Config.hpp
         Detect.cpp Detect.hpp
         TheCarCV.cpp TheCarCV.hpp
-        speedtest.h)
+        speedtest.h
+        CNN.cpp CNN.hpp
+        RoadSign.hpp)
 
 add_executable(TheCar ${SOURCE_FILES})
